bug fixes - user able to send messages after user left message, added max-height and scrollbar to codeBox

--- a/src/main/styles/prism.css
+++ b/src/main/styles/prism.css
@@ -27,7 +27,8 @@ pre[class*=language-] {
     margin: .5em 0;
     margin-bottom: 2rem;
     overflow: auto;
-    border-radius: .3em
+    border-radius: .3em;
+    max-height: 30rem;
 }
 
 :not(pre)>code[class*=language-],
@@ -121,4 +122,28 @@ pre[class*=language-] {
     margin-top: 0.8rem;
     margin-bottom: 1.5rem;
     padding: 1rem 0;
+}
+
+.code-block::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+    border-radius: 50px;
+}
+
+.code-block::-webkit-scrollbar-thumb {
+    background: rgba(27, 27, 27, 0.8);
+    height: 20px;
+    border: 5px solid rgba(27, 27, 27, 0.8);
+    border-radius: 50px;
+    transition: 0.3s;
+}
+
+.code-block::-webkit-scrollbar-thumb:hover {
+    background: rgba(27, 27, 27, 0.8);
+}
+
+.code-block::-webkit-scrollbar-track {
+    background: transparent;
+    /* margin-block: 0.5em; */
+    background-clip: content-box;
 }
